--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<div> test</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Toto je moja nova stranka</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem impedit laboriosam quia eos fugit! Ipsum neque veniam placeat in dicta soluta voluptatem doloremque corporis eveniet vitae, incidunt perferendis nemo maxime.</p>
+</body>
+</html>
